chore: reorganize repository structure
- Move internal working docs (AGENT.md, TASKS.md, START-PROMPT.md, etc.) to docs/archive/
- Update .gitignore to exclude internal docs from tracking
- Update STRUCTURE.md to reflect clean organization
- Keep only polished, public-facing docs in docs/
- Maintain professional appearance for portfolio/publication

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,16 @@ archive/
 *_OLD.*
 *_backup.*
 
+# Internal working docs (not for public view)
+docs/AGENT.md
+docs/TASKS.md
+docs/START-PROMPT.md
+docs/M4_INSTRUCTIONS.md
+docs/M5_INSTRUCTIONS.md
+docs/M7_KAGGLE_RUNBOOK.md
+docs/KAGGLE_INSTRUCTIONS.md
+docs/archive/
+
 # Logs
 *.log
 logs/
